Commit: Estrutura da aplicação - Aplicando responsividade
vamos explorar o conceito de responsavididade, aprender dicas e truques para fazer isso de forma mais fácil e adaptada para dispositivos mobile.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,10 @@
     gap: 2rem;
     align-items: flex-start;
 }
+
+@media (max-width: 678px) { /* Quando a tela for < 720px */
+    .wrapper {
+      grid-template-columns: 1fr;
+    }
+
+}
