--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -1,14 +1,15 @@
 .avatar {
-  width: calc(3rem);
-  height: calc(3rem);
+  width: 3rem;
+  height: 3rem;
   border-radius: 8px;
   
 }
 
-.avatarWidthBorder {
+.avatarWithBorder {
   width: calc(3rem + 12px);
   height: calc(3rem + 12px);
   border-radius: 8px;
   border: 4px solid var(--gray-800);
   outline: 2px solid var(--green-500);
 }
+
