--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -45,6 +45,8 @@
     gap: 1rem;
 }
 
+
+
 .authorInfo strong {
     display: block;
     color: var(--gray-100);
@@ -52,7 +54,7 @@
 }
 
 .authorInfo span {
-    display: block;
+    /* display: block; */
     font-size: 0.875rem;
     color: var(--gray-400);
     line-height: 1.6;
@@ -93,7 +95,7 @@
     max-height: none;
 }
 
-.commentForm  button[type= submit] {
+.commentForm  button[type= "submit"] {
     padding: 1rem 1.5rem;
     margin-top: 1rem;
     border-radius: 8px;
@@ -107,7 +109,7 @@
     
 }
 
-.commentForm > button[type= submit]:hover {
+.commentForm > button[type= "submit"]:hover {
     background: var(--green-300);
 }
 
